--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@
                     admiran y glorifican sus hazañas, únete y comparte tus 
                     logros con otros fans de Dark Souls.</p>
                 <ul>
-                    <li class="link"><a hrel="https://darksouls.wiki.fextralife.com/" target="_blank" style="color: white;"> Dark Souls Wiki Fextralife</a></li>
-                    <li class="link"><a hrel="https://www.reddit.com/r/darksouls/" target="_blank" style="color: white;"> Subreddit r/darksouls</a></li>
-                    <li class="link"><a hrel="https://darksouls.fandom.com/es/wiki/Dark_Souls_Wiki" target="_blank" style="color: white;"> Dark Souls Wiki (Fandom)</a></li>
+                    <li class="link"><a href="https://darksouls.wiki.fextralife.com/" target="blank" class="link2"> Dark Souls Wiki Fextralife</a></li>
+                    <li class="link"><a href="https://www.reddit.com/r/darksouls/" target="blank" class="link2"> Subreddit r/darksouls</a></li>
+                    <li class="link"><a href="https://darksouls.fandom.com/es/wiki/Dark_Souls_Wiki" target="blank" class="link2"> Dark Souls Wiki (Fandom)</a></li>
                     </ul>
+
             </div>
         </section>
 
