Mejora en la seccion del apartado del lore

--- a/index.html
+++ b/index.html
@@ -172,12 +172,29 @@
             <div class="container">
                 <h2>El Lore</h2>
                 <p>El universo de Dark Souls esconde una narrativa rica y enigmática. Sumérgete en las leyendas, personajes y la caída de los reinos.</p>
-                <ul>
-                    <li>La Era de los Antiguos y la Primera Llama</li>
-                    <li>Gwyn, el Señor de la Ceniza</li>
-                    <li>Los Dragones Eternos</li>
-                    <li>La Maldición de los No Muertos</li>
-                </ul>
+                
+                <div class="boss-list1">
+
+                    <div class="boss-item1">   
+                    <iframe width="300" height="200" src="https://www.youtube.com/embed/dapbeahUpk4?si=dzEhWmypYosSbkYy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        
+                    <h3>La primera llama</h3>
+                    <p>Una manifestación de todos los Señores de la Ceniza que han vinculado la Llama a lo largo de las eras.</p>
+                    </div>
+
+                    <div class="boss-item1">
+                    <iframe width="300" height="200" src="https://www.youtube.com/embed/gee4yA7DhFk?si=V2YQGig0Va766idI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                       
+                    <h3>Gwyn El Lord de las Cenizas</h3>
+                    <p>Una manifestación de todos los Señores de la Ceniza que han vinculado la Llama a lo largo de las eras.</p>
+                    </div>
+
+                    <div class="boss-item1">
+                    <iframe width="300" height="200" src="https://www.youtube.com/embed/l3Cfm30aGcE?si=ebheNG4v1JfNyw6j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3>Los dragones Eternos</h3>
+                    <p>Una manifestación de todos los Señores de la Ceniza que han vinculado la Llama a lo largo de las eras.</p>
+                    </div>
+
+                </div>
+
             </div>
         </section>
 
@@ -191,7 +208,8 @@
                     <li class="link"><a href="https://darksouls.wiki.fextralife.com/" target="blank" class="link2"> Dark Souls Wiki Fextralife</a></li>
                     <li class="link"><a href="https://www.reddit.com/r/darksouls/" target="blank" class="link2"> Subreddit r/darksouls</a></li>
                     <li class="link"><a href="https://darksouls.fandom.com/es/wiki/Dark_Souls_Wiki" target="blank" class="link2"> Dark Souls Wiki (Fandom)</a></li>
-                    </ul>
+                   
+                </ul>
 
             </div>
         </section>
